// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`airtable survey responses basic response 1`] = `
Array [
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Airtable",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": Object {
        "source": "Airtable",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Airtable",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "app0z7JKgJ19t13fw",
    },
  },
]
`;

exports[`airtable survey responses question metadata 1`] = `
Array [
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Airtable",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": Object {
        "source": "Airtable",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Airtable",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "app0z7JKgJ19t13fw",
    },
  },
  Object {
    "model": "survey_Question__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "questionCategory",
        "responseType",
      ],
      "patch": Object {
        "questionCategory": Object {
          "category": "AlignmentAndGoals",
          "detail": "AlignmentAndGoals",
        },
        "responseType": Object {
          "category": "Binary",
          "detail": "Binary",
        },
      },
      "where": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "stats",
      ],
      "patch": Object {
        "stats": Object {
          "invitationCount": 0,
          "questionCount": 1,
          "responseCount": 1,
        },
      },
      "where": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
]
`;

exports[`airtable survey responses response with survey metadata 1`] = `
Array [
  Object {
    "model": "survey_User",
    "record": Object {
      "email": "john@doe.xyz",
      "name": "John Doe",
      "source": "Airtable",
      "uid": "john@doe.xyz",
    },
  },
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Airtable",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_TeamMembership",
    "record": Object {
      "member": Object {
        "source": "Airtable",
        "uid": "john@doe.xyz",
      },
      "team": Object {
        "source": "Airtable",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": Object {
        "source": "Airtable",
        "uid": "john@doe.xyz",
      },
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": Object {
        "source": "Airtable",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": "This is a survey",
      "endedAt": 2023-10-09T14:09:37.000Z,
      "name": "Survey1",
      "source": "Airtable",
      "startedAt": 2023-10-09T14:09:37.000Z,
      "status": Object {
        "category": "Completed",
        "detail": "Completed",
      },
      "type": Object {
        "category": "ENPS",
        "detail": "ENPS",
      },
      "uid": "app0z7JKgJ19t13fw",
    },
  },
]
`;

exports[`airtable survey responses response with user and team info 1`] = `
Array [
  Object {
    "model": "survey_User",
    "record": Object {
      "email": "john@doe.xyz",
      "name": "John Doe",
      "source": "Airtable",
      "uid": "john@doe.xyz",
    },
  },
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Airtable",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_TeamMembership",
    "record": Object {
      "member": Object {
        "source": "Airtable",
        "uid": "john@doe.xyz",
      },
      "team": Object {
        "source": "Airtable",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": Object {
        "source": "Airtable",
        "uid": "john@doe.xyz",
      },
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": Object {
        "source": "Airtable",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Airtable",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "app0z7JKgJ19t13fw",
    },
  },
]
`;

exports[`airtable survey responses survey metadata 1`] = `
Array [
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Airtable",
      "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": Object {
        "source": "Airtable",
        "uid": "4b68ab3847feda7d6c62c1fbcbeebfa35eab7351ed5e78f4ddadea5df64b8015",
      },
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Airtable",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "app0z7JKgJ19t13fw",
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "stats",
      ],
      "patch": Object {
        "stats": Object {
          "invitationCount": 0,
          "questionCount": 1,
          "responseCount": 1,
        },
      },
      "where": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697245567000,
      "mask": Array [
        "name",
        "description",
        "type",
        "status",
        "startedAt",
        "endedAt",
      ],
      "patch": Object {
        "description": "This is a survey",
        "endedAt": 2023-10-09T14:09:37.000Z,
        "name": "Survey1",
        "startedAt": 2023-10-09T14:09:37.000Z,
        "status": Object {
          "category": "Completed",
          "detail": "Completed",
        },
        "type": Object {
          "category": "ENPS",
          "detail": "ENPS",
        },
      },
      "where": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
]
`;

exports[`airtable survey responses uses team id 1`] = `
Array [
  Object {
    "model": "survey_User",
    "record": Object {
      "email": "john@doe.xyz",
      "name": "John Doe",
      "source": "Airtable",
      "uid": "john@doe.xyz",
    },
  },
  Object {
    "model": "survey_Team",
    "record": Object {
      "name": "X",
      "source": "Airtable",
      "uid": "team1",
    },
  },
  Object {
    "model": "survey_TeamMembership",
    "record": Object {
      "member": Object {
        "source": "Airtable",
        "uid": "john@doe.xyz",
      },
      "team": Object {
        "source": "Airtable",
        "uid": "team1",
      },
    },
  },
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": Object {
        "source": "Airtable",
        "uid": "john@doe.xyz",
      },
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": Object {
        "source": "Airtable",
        "uid": "team1",
      },
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Airtable",
      "startedAt": null,
      "status": null,
      "type": null,
      "uid": "app0z7JKgJ19t13fw",
    },
  },
]
`;
